Added logo to the page, and added images folder for further images if needed

--- a/about.html
+++ b/about.html
@@ -107,6 +107,16 @@
         background-color: #F97316
       }
 
+      /* Styles for the logo */
+        .logo {
+         max-width: 120px; 
+         height: auto;
+         display: block;
+         /* centers and adds space below */
+         margin: 0 auto 1rem auto; 
+      }
+
+
 
     </style>
 
@@ -117,7 +127,8 @@
 
   <!-- Header / Logo placeholder -->
   <header class="header-section py-4 text-center">
-    <!-- Replace this with an image tag when logo gets made -->
+    <!-- Image used as a logo-->
+    <img src="images/Logo.png" alt="The app's logo" class="logo">
     <h1 class="mb-0">BBY-20</h1>
   </header>
 
