--- a/pollDetail.html
+++ b/pollDetail.html
@@ -2,75 +2,95 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Poll Details</title>
+  <title>Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-      background-color: #f9f9f9;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #ffffff;
+      margin: 0;
+      padding: 0;
     }
-    .container {
-      max-width: 600px;
-      margin: auto;
-      background: white;
+
+    header {
+      background-color: #1E2A78;
+      color: white;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .title {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-    .meta {
-      color: gray;
-      font-size: 14px;
-      margin-bottom: 20px;
-    }
-    .stats {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-    }
-    .stat {
-      background: #eee;
-      padding: 10px;
-      border-radius: 8px;
       text-align: center;
-      width: 30%;
     }
-    .stat strong {
-      display: block;
-      font-size: 18px;
+
+    .dashboard-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 40px 20px;
     }
-    .description {
-      margin-bottom: 20px;
+
+    .card {
+      flex: 1 1 300px;
+      max-width: 300px;
+      padding: 20px;
+      color: white;
+      border-radius: 12px;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .orange { background-color: #FF7300; }
+    .blue { background-color: #1DAEFF; }
+    .yellow { background-color: #FFD700; color: black; }
+    .green { background-color: #56C02B; }
+    .magenta { background-color: #BA00C1; }
+    .purple { background-color: #5E35B1; }
+
+    footer {
+      background-color: #1E2A78;
+      color: white;
+      text-align: center;
+      padding: 10px 20px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="title">New Community Park Project</div>
-    <div class="meta">Posted on April 20 • Tags: #Environment, #Park</div>
-    
-    <div class="description">
-      We're planning to create a new community park in the east side. Please vote and share your feedback.
-    </div>
 
-    <div class="stats">
-      <div class="stat">
-        <strong>18</strong>
-        Saves
-      </div>
-      <div class="stat">
-        <strong>32</strong>
-        Votes
-      </div>
-      <div class="stat">
-        <strong>5</strong>
-        Comments
-      </div>
+  <header>
+    <h1>Welcome, Donald!</h1>
+    <p>Your personalized dashboard</p>
+  </header>
+
+  <div class="dashboard-container">
+    <div class="card orange">
+      <h2>Post Polls</h2>
+      <p>Create a new poll and share it with your community.</p>
+    </div>
+    <div class="card blue">
+      <h2>Vote on Projects</h2>
+      <p>Participate in decisions that matter to you.</p>
+    </div>
+    <div class="card yellow">
+      <h2>Saved Polls</h2>
+      <p>Access your bookmarked polls for quick reference.</p>
+    </div>
+    <div class="card green">
+      <h2>Tag Management</h2>
+      <p>Add or manage tags to categorize your polls.</p>
+    </div>
+    <div class="card magenta">
+      <h2>Past Polls</h2>
+      <p>Review all polls you've created and their stats.</p>
+    </div>
+    <div class="card purple">
+      <h2>Settings</h2>
+      <p>Customize your profile and preferences.</p>
     </div>
   </div>
+
+  <footer>
+    © BBY-20 Team — All rights reserved.
+  </footer>
+
 </body>
 </html>
