--- a/public/about.html
+++ b/public/about.html
@@ -124,6 +124,18 @@
 
     <body>
 
+      <!-- Button to go back to the landing page-->
+      <div style="position: absolute; top: 10rem; left: -.5rem; z-index: 1000;">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 text-start">
+              <a href="/" class="btn btn-info text-white">
+                Landing Page
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
 
   <!-- Header / Logo placeholder -->
   <header class="header-section py-4 text-center">
